# Handly-Backend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sqlx/: query-1b7b31116892e15a38c7a9366d1ef610c6dd851285dff199359e36955405fd22.json  query-24b853508f507931a48a3728c5cc6c6e5b126f326ec9048e6bd6f3d39cc8b28e.json  query-30d2f26940170fb833d43d809ea51a146a9eb19be8d446d410af8083f941c15d.json  query-49247411b7f8d29f656d887f50c5e02aaa50cf6904b747d7bdb4bd172ef45c37.json  query-650fc49e0ac79009083a54bfc8ee0dc01c25de9827afa7a873d00b062f6687b7.json  query-66705f2c8a78a5b484bcc6f1c369a241d90ab101092aa9d592e69446383a5f45.json  query-7af942f92db616e3ef2ad1d18403984033bcd49b2fed9d0d5084dbc173681974.json  query-8d609d68f6f2dcaf73220576a3f62ab3d85901d15af6934ad9b7b4cb3d95cfba.json  query-e19755be82651b8ce5eafee1f7f6b0ed5a88d8ea61594c18a31228eb31cd7703.json  query-e1d4b887009b6c1d308dc730ca6b463ee1a567fc5b1a7af9b21e19d6c348d2d4.json  query-e7569c5023e6daf85c06a4a19c0c7c2b3de2828684b1984984ecc8b1cf67dec6.json  query-ebfac2733dc20c9d66be77f27337dfcb6c191d715ae85211faf707f98fbb1ae0.json  query-f9b57c67e8245ffb7779b1e5551d25e19969003c8b8f29864586aa48b6bbbac4.json  query-ffdc4f378ec1093497d84ccbee9e568794560e31b741c8e19df0ff4d58860163.json
migrations/: 20250424181133_create_users.sql  20250507180101_init_users_fix.sql  20250516121934_init_users.sql  20250517233754_user_profile_pic.sql  20250518202615_create_services.sql
src/: config.rs  db.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs  protected.rs  services.rs  upload.rs  users.rs
src/models/: service.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs  services.rs  users.rs
src/services/: auth.rs
src/validations/: auth.rs  mod.rs  service.rs  user.rs
tests/: auth_tests.rs  helper.rs  user_tests.rs
