[package]
name = "handly-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde   = { version = "1", features = ["derive"] }
uuid    = { version = "1", features = ["v4", "serde"] }
sqlx    = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
