[package]
name = "handly-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-files = "0.6"
actix-multipart = "0.4"
actix-http = "3.0"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
time = "0.3"

[dev-dependencies]
url = "2"